# sh_kora_src

./: CMakeLists.txt  em.cpp  main.cpp
kora/: Metabolite.cpp  Metabolite.h  Model.cpp  Model.h  Reaction.cpp  Reaction.h  common.cpp  common.h  utils.cpp  utils.h
